// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commitAndPullRequest should fail to create PR request error 1`] = `
Array [
  "git",
  Array [
    "diff-index",
    "--quiet",
    "HEAD",
    "--",
  ],
  Object {
    "env": Object {
      "GH_TOKEN": "xxx",
      "TRAVIS_REPO_SLUG": "some/repo",
    },
    "stdio": Array [
      "ignore",
      Object {
        "chunks": Array [],
        "writable": true,
      },
    ],
  },
]
`;

exports[`commitAndPullRequest should fail to create PR request error 2`] = `
Array [
  "git",
  Array [
    "add",
    ".",
  ],
  Object {
    "env": Object {
      "GH_TOKEN": "xxx",
      "TRAVIS_REPO_SLUG": "some/repo",
    },
    "stdio": Array [
      "ignore",
      Object {
        "chunks": Array [],
        "writable": true,
      },
    ],
  },
]
`;

exports[`commitAndPullRequest should fail to create PR request error 3`] = `
Array [
  "git",
  Array [
    "commit",
    "-m",
    "Blah blah",
  ],
  Object {
    "env": Object {
      "GH_TOKEN": "xxx",
      "TRAVIS_REPO_SLUG": "some/repo",
    },
    "stdio": Array [
      "ignore",
      Object {
        "chunks": Array [],
        "writable": true,
      },
    ],
  },
]
`;

exports[`commitAndPullRequest should fail to create PR request error 4`] = `
Array [
  "git",
  Array [
    "remote",
    "add",
    "origin-with-token",
    "https://xxx@github.com/some/repo.git",
  ],
  Object {
    "env": Object {
      "GH_TOKEN": "xxx",
      "TRAVIS_REPO_SLUG": "some/repo",
    },
    "stdio": Array [
      "ignore",
      Object {
        "chunks": Array [],
        "writable": true,
      },
    ],
  },
]
`;

exports[`commitAndPullRequest should fail to create PR request error 5`] = `
Object {
  "headers": Object {
    "Authorization": "token xxx",
    "Content-Length": 72,
    "Content-Type": "application/json",
    "User-Agent": "Node.js https.request",
  },
  "hostname": "api.github.com",
  "method": "POST",
  "path": "/repos/some/repo/pulls",
  "port": 443,
}
`;

exports[`commitAndPullRequest should reject when PR request statusCode > 201 1`] = `
Array [
  "git",
  Array [
    "diff-index",
    "--quiet",
    "HEAD",
    "--",
  ],
  Object {
    "env": Object {
      "GH_TOKEN": "xxx",
      "TRAVIS_REPO_SLUG": "some/repo",
    },
    "stdio": Array [
      "ignore",
      Object {
        "chunks": Array [],
        "writable": true,
      },
    ],
  },
]
`;

exports[`commitAndPullRequest should reject when PR request statusCode > 201 2`] = `
Array [
  "git",
  Array [
    "add",
    ".",
  ],
  Object {
    "env": Object {
      "GH_TOKEN": "xxx",
      "TRAVIS_REPO_SLUG": "some/repo",
    },
    "stdio": Array [
      "ignore",
      Object {
        "chunks": Array [],
        "writable": true,
      },
    ],
  },
]
`;

exports[`commitAndPullRequest should reject when PR request statusCode > 201 3`] = `
Array [
  "git",
  Array [
    "commit",
    "-m",
    "Blah blah",
  ],
  Object {
    "env": Object {
      "GH_TOKEN": "xxx",
      "TRAVIS_REPO_SLUG": "some/repo",
    },
    "stdio": Array [
      "ignore",
      Object {
        "chunks": Array [],
        "writable": true,
      },
    ],
  },
]
`;

exports[`commitAndPullRequest should reject when PR request statusCode > 201 4`] = `
Array [
  "git",
  Array [
    "remote",
    "add",
    "origin-with-token",
    "https://xxx@github.com/some/repo.git",
  ],
  Object {
    "env": Object {
      "GH_TOKEN": "xxx",
      "TRAVIS_REPO_SLUG": "some/repo",
    },
    "stdio": Array [
      "ignore",
      Object {
        "chunks": Array [],
        "writable": true,
      },
    ],
  },
]
`;

exports[`commitAndPullRequest should reject when PR request statusCode > 201 5`] = `
Object {
  "headers": Object {
    "Authorization": "token xxx",
    "Content-Length": 72,
    "Content-Type": "application/json",
    "User-Agent": "Node.js https.request",
  },
  "hostname": "api.github.com",
  "method": "POST",
  "path": "/repos/some/repo/pulls",
  "port": 443,
}
`;

exports[`commitAndPullRequest should succeed when all good ;-) 1`] = `
Array [
  "git",
  Array [
    "diff-index",
    "--quiet",
    "HEAD",
    "--",
  ],
  Object {
    "env": Object {
      "GH_TOKEN": "xxx",
      "TRAVIS_REPO_SLUG": "some/repo",
    },
    "stdio": Array [
      "ignore",
      Object {
        "chunks": Array [
          "Pull request created. See https://foo.bar/baz
",
        ],
        "writable": true,
      },
    ],
  },
]
`;

exports[`commitAndPullRequest should succeed when all good ;-) 2`] = `
Array [
  "git",
  Array [
    "add",
    ".",
  ],
  Object {
    "env": Object {
      "GH_TOKEN": "xxx",
      "TRAVIS_REPO_SLUG": "some/repo",
    },
    "stdio": Array [
      "ignore",
      Object {
        "chunks": Array [
          "Pull request created. See https://foo.bar/baz
",
        ],
        "writable": true,
      },
    ],
  },
]
`;

exports[`commitAndPullRequest should succeed when all good ;-) 3`] = `
Array [
  "git",
  Array [
    "commit",
    "-m",
    "Blah blah",
  ],
  Object {
    "env": Object {
      "GH_TOKEN": "xxx",
      "TRAVIS_REPO_SLUG": "some/repo",
    },
    "stdio": Array [
      "ignore",
      Object {
        "chunks": Array [
          "Pull request created. See https://foo.bar/baz
",
        ],
        "writable": true,
      },
    ],
  },
]
`;

exports[`commitAndPullRequest should succeed when all good ;-) 4`] = `
Array [
  "git",
  Array [
    "remote",
    "add",
    "origin-with-token",
    "https://xxx@github.com/some/repo.git",
  ],
  Object {
    "env": Object {
      "GH_TOKEN": "xxx",
      "TRAVIS_REPO_SLUG": "some/repo",
    },
    "stdio": Array [
      "ignore",
      Object {
        "chunks": Array [
          "Pull request created. See https://foo.bar/baz
",
        ],
        "writable": true,
      },
    ],
  },
]
`;

exports[`commitAndPullRequest should succeed when all good ;-) 5`] = `
Object {
  "headers": Object {
    "Authorization": "token xxx",
    "Content-Length": 72,
    "Content-Type": "application/json",
    "User-Agent": "Node.js https.request",
  },
  "hostname": "api.github.com",
  "method": "POST",
  "path": "/repos/some/repo/pulls",
  "port": 443,
}
`;
